--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.1.0",
     "dayjs": "^1.11.6",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
