--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "bootstrap": "^5.2.2",
     "chart.js": "^4.1.0",
     "dayjs": "^1.11.6",
+    "faker": "^5.5.3",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.12",
     "react-router": "^6.4.3",
