--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL=https://logistics-rodrigue-backend.onrender.com/api/
+# REACT_APP_BASE_URL=https://logistics-rodrigue-backend.onrender.com/api/
+REACT_APP_BASE_URL=http://localhost:5000/api/
