--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "chart.js": "^4.1.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-zoom": "^2.0.0",
     "dayjs": "^1.11.6",
     "faker": "^5.5.3",
