--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.6",
     "faker": "^5.5.3",
     "js-cookie": "^3.0.1",
+    "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
