--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.6",
     "faker": "^5.5.3",
     "js-cookie": "^3.0.1",
+    "lodash.debounce": "^4.0.8",
     "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
