--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@mui/x-date-pickers": "^5.0.8",
+    "@react-pdf/renderer": "^3.1.7",
+    "@react-spring/web": "^9.7.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +28,7 @@
     "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.12",
@@ -33,6 +36,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.0",
+    "styled-components": "^5.3.8",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
@@ -59,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
