--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "chartjs-plugin-zoom": "^2.0.0",
     "dayjs": "^1.11.6",
     "faker": "^5.5.3",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.1",
     "lodash.debounce": "^4.0.8",
     "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.1.0",
