--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.8",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
