--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-date-pickers": "^5.0.8",
     "@react-pdf/renderer": "^3.1.7",
     "@react-spring/web": "^9.7.1",
+    "@tanstack/react-query": "^4.35.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +28,7 @@
     "dayjs": "^1.11.6",
     "faker": "^5.5.3",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.5",
     "js-cookie": "^3.0.1",
     "lodash.debounce": "^4.0.8",
     "material-ui-popup-state": "^5.0.4",
