--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.1",
+    "loadash": "^1.0.0",
     "lodash.debounce": "^4.0.8",
     "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
@@ -73,6 +74,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "tailwindcss": "^3.3.3"
   }
 }
