--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26",
-    "tailwindcss": "^3.3.3"
+    "@types/styled-components": "^5.1.26"
   }
 }
